--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "firebase": "^9.9.4",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3",
     "vue-star-rating": "^2.1.0"
